<resources>
    <string name="app_name">Roommate Wrangler</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="splash_text1">Roommate Wrangler</string>
    <string name="splash_text2">Margaret Caufield     Megan Edwards</string>
    <string name="splash_text3">Auburn University     COMP3710     Spring 2015</string>
    <string name="add_roommate_text">Add Roommate</string>
    <string name="manage_bills_text">Manage Bills</string>
    <string name="manage_groceries_text">Manage Groceries</string>
    <string name="add_roommate_name">Roommate Name:</string>
    <string name="add_roommate_number">Roommate Number:</string>
    <string name="add_bill_text">Add Bill</string>
    <string name="manage_bill_payment_text">Manage Bill Payment</string>
    <string name="view_history_text">View Payment History</string>
    <string name="add_grocery_instructions">Please select a roommate and what he/she purchased below</string>
    <string name="eating_out_text">Bought Fast Food/Pizza</string>
    <string name="milk_text">Bought Milk</string>
    <string name="bread_text">Bought Bread</string>
    <string name="eggs_text">Bought Eggs</string>
    <string name="view_grocery_his">View Grocery History</string>
    <string name="add_purchased_item">Add Purchased Item</string>
    <string name="milk_purchased">Milk Purchased: </string>
    <string name="bread_purchased">Bread Purchased: </string>
    <string name="ff_purchased">Fast Food/Pizza Purchased: </string>
    <string name="eggs_purchased">Eggs Purchased: </string>
    <string name="confirm_add_text">Add Item</string>
    <string name="cancel_text">Cancel Add</string>
    <string name="water_text">Water</string>
    <string name="power_text">Power</string>
    <string name="internet_cable_text">Internet/Cable</string>
    <string name="trash_text">Trash</string>
    <string name="landscape_text">Landscape</string>
    <string name="confirm_add_roommate">Add Roommate</string>
    <string name="add_bill_instructions">Please select bill type and enter the amount below. This will divide the bill evenly between all roommates.</string>
    <string name="amount_text">Amount </string>
    <string name="confirm_add_bill">Add Bill</string>
    <string name="starting_instructions">Please add all roommates (including yourself) before adding bills or groceries</string>
    <string name="grocery_title1">Name</string>
    <string name="grocery_title2">Item</string>
    <string name="grocery_title3">Times Purchased</string>
    <string name="bills_paid_text">Mark Bills Paid</string>
    <string name="bill_title1">Name</string>
    <string name="bill_title2">Type</string>
    <string name="bill_title3">Amount</string>
    <string name="bill_title4">Paid</string>
    <string name="add_roommate_title">Add New Roommate</string>
    <string name="add_grocery_title">Who Bought What?</string>
    <string name="add_bill_title">Add New Bill</string>
    <string name="want_to_paid">Do you really want to mark this bill as paid?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="mark_paid">Mark Bill Paid</string>
    <string name="bill_reminder_text">Send Bill Reminder</string>
    <string name="bill_reminder_name">Name</string>
    <string name="bill_reminder_total">Total</string>
    <string name="send_reminders_text">Send Reminders</string>
    <string name="reminder_cancel">Cancel</string>
    <string name="add_successful">Add Successful</string>
    <string name="reminders_sent">Reminders Sent</string>
    <string name="bill_marked_paid">Bill Marked as Paid</string>
    <string name="too_many_roommates">You have already added 5 roommates! No more!</string>
    <string name="no_unpaid_bills">There are no unpaid bills. No reminders sent</string>
    <string name="invalid_input">Invalid Input</string>
    <string name="number_style">Please input number as 10 digits no dashes or parentheses</string>
    <string name="name_style">Please input the first name only</string>
    <string name="reset">All data cleared</string>
    <string name="warning">Warning: This button will delete all bills, groceries, and roommate information</string>
    <string name="add_roommate_bill">Please add a roommate before adding a bill</string>
    <string name="add_roommate_grocery">Please add a roommate before adding a grocery</string>
</resources>
