<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_bill_instructions"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/water_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/water_text"/>
        <RadioButton
            android:id="@+id/power_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/power_text"/>
        <RadioButton
            android:id="@+id/internet_cable_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/internet_cable_text"/>
        <RadioButton
            android:id="@+id/trash_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trash_text"/>
        <RadioButton
            android:id="@+id/landscape_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/landscape_text"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount_text"/>
    <EditText
        android:id="@+id/amount_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        />
    </LinearLayout>
</LinearLayout>