<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_grocery_instructions"/>
    <Spinner
        android:id="@+id/roommate_name_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true">
        </Spinner>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/milk_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/milk_text"/>
        <RadioButton
            android:id="@+id/bread_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bread_text"/>
        <RadioButton
            android:id="@+id/eggs_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eggs_text"/>
        <RadioButton
            android:id="@+id/ff_pizza_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eating_out_text"/>
    </RadioGroup>
</LinearLayout>